src/main/default/objects/User/fields/NEILON1__Address__c.field-meta.xml
<CustomField>
    <fullName>NEILON1__Address__c</fullName>
    <formula>Street &amp; IF(NOT(ISBLANK(Street)), &quot; &quot;, null) &amp; City &amp; IF(NOT(ISBLANK(City)), &quot; &quot;, null) &amp; State &amp; IF(NOT(ISBLANK(State)), &quot; &quot;, null) &amp; Country</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>