src/main/default/objects/User/fields/NEILON1__Is_Field_Staff__c.field-meta.xml
<CustomField>
    <fullName>NEILON1__Is_Field_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, system allows user to be assigned as as a field staff in a job.</description>
    <inlineHelpText>If checked, system allows user to be assigned as as a field staff in a job.</inlineHelpText>
    <label>Field Staff?</label>
    <type>Checkbox</type>
</CustomField>