src/main/default/objects/User/fields/NEILON1__Is_Job_Manager__c.field-meta.xml
<CustomField>
    <fullName>NEILON1__Is_Job_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, access for Neilon Job Manager will be granted.</description>
    <inlineHelpText>If checked, access for Neilon Job Manager will be granted.</inlineHelpText>
    <label>Is Neilon Job Manager?</label>
    <type>Checkbox</type>
</CustomField>