src/main/default/objects/User/fields/NEILON1__Is_Restricted__c.field-meta.xml
<CustomField>
    <fullName>NEILON1__Is_Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the user will not get access to certain jobs.</description>
    <inlineHelpText>If checked, the user will not get access to certain jobs.</inlineHelpText>
    <label>Is Neilon Job Restriction?</label>
    <type>Checkbox</type>
</CustomField>