src/main/default/objects/User/fields/NEILON1__Neilon_Job_Manager_Role__c.field-meta.xml
<CustomField>
    <fullName>NEILON1__Neilon_Job_Manager_Role__c</fullName>
    <label>Neilon Job Manager Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auditor</fullName>
            </value>
            <value>
                <fullName>Lead Auditor</fullName>
            </value>
            <value>
                <fullName>CAP Manager</fullName>
            </value>
            <value>
                <fullName>OO Lead</fullName>
            </value>
            <value>
                <fullName>Regional Manager</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Portal User</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Contractor Coordinator</fullName>
            </value>
            <value>
                <fullName>Report Reviewer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>