src/main/default/objects/User/fields/NEILON1__Offices__c.field-meta.xml
<CustomField>
    <fullName>NEILON1__Offices__c</fullName>
    <description>Neilon Job offices to whom user belongs.</description>
    <inlineHelpText>Neilon Job offices to whom user belongs.</inlineHelpText>
    <label>Neilon Job Offices</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Assigned</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
                <default>true</default>
                <label>USA</label>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
                <isActive>false</isActive>
                <label>United States</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>